--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@mui/x-charts": "^8.18.0",
     "@tailwindcss/vite": "^4.1.17",
     "bootstrap": "^5.3.8",
+    "firebase": "^12.6.0",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
+    "react-head": "^3.4.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
-    "react-router-dom": "^7.9.5",
+    "react-router-dom": "^7.9.6",
     "react-tabs": "^6.1.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.17"
